--- a/app/globals.css
+++ b/app/globals.css
@@ -65,3 +65,9 @@
   --input: 217.2 32.6% 17.5%;
   --ring: 212.7 26.8% 83.9%;
 }
+.code-block span[style] {
+  user-select: auto !important;
+}
+.wmde-markdown pre > code {
+  text-wrap: wrap;
+}
